--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 
    <div id = computerChoice>
-    <div class="deckC">computer deck</div>
-    <div class="deckC">computer deck</div>
-    <div class="deckC">computer deck</div>
+    <div class="deckC"></div>
+    <div class="deckC"></div>
+    <div class="deckC"></div>
    </div>
 
    <div id = computerC>
@@ -30,9 +30,9 @@
    </div>
 
    <div  id = userChoice>
-    <div id="rock" class="deckP">Player's deck</div>
-    <div id="paper" class="deckP">Player's deck</div>
-    <div id="scissor" class="deckP">Player's deck</div>
+    <div id="rock" class="deckP"></div>
+    <div id="paper" class="deckP"></div>
+    <div id="scissor" class="deckP"></div>
    </div>
 
 </section>
