--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>ColorWar</title>
+  <title>Spirited Away</title>
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/animate.css">
   <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
@@ -13,7 +13,9 @@
 <body>
 
 <main>
+
  <div id= result class="result"></div>
+
  </main>
 
 
@@ -26,12 +28,13 @@
     <div class="deckC"></div>
    </div>
 
+   <span class="rain">
    <div id = computerC>
     <div class="deck1">Computer Card Down</div>
    </div>
    <div id = userC>
-    <div class="deck2">player card Down</div>
-
+     <div class="deck2">player card Down</div>
+   </span>
 
 
 
