--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/animate.css">
   <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 
 
 
@@ -15,7 +16,9 @@
 <main>
 
  <div id= result class="result"></div>
-
+ <div id="container">
+    <span id="random">play with me!</span>
+</div>
  </main>
 
 
@@ -30,20 +33,18 @@
 
    <span class="rain ">
    <div id = computerC>
-    <div class="deck1">Computer Card Down</div>
+    <div class="deck1"></div>
    </div>
    <div id = userC>
-     <div class="deck2">player card Down</div>
-   </span>
-
-
-
-   </div>
+     <div class="deck2"></div>
+    </span>
+    </div>
 
    <div  id = userChoice class= "rubberBand animated" data-delay="2s">
-   <div id="rock"    class="deckP" >ROCK </div>
-   <div id="paper"   class="deckP" >PAPER </div>
-   <div id="scissor" class="deckP" >SCISSOR </div>
+   <div id="rock"    class="deckP icon" >ROCK </div>
+   <div id="paper"   class="deckP icon" >PAPER </div>
+   <div id="scissor" class="deckP icons" >SCISSOR </div>
+
    </div>
 </section>
 <script src="js/main.js" type="text/javascript"></script>
