--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
     </div>
 
    <div  id = userChoice class= "rubberBand animated" data-delay="2s">
-   <div id="rock"    class="deckP icon" >ROCK </div>
-   <div id="paper"   class="deckP icon" >PAPER </div>
-   <div id="scissor" class="deckP icons" >SCISSOR </div>
+
+   <div id="rock"    class="deckP" onmousedown="bleep.play()">ROCK </div>
+   <div id="paper"   class="deckP" onmousedown="bleep.play()">PAPER </div>
+   <div id="scissor" class="deckP" onmousedown="bleep.play()">SCISSOR </div>
 
    </div>
 </section>
