last repo hopefully

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 </head>
 <body>
 
+
+<audio autoplay>
+
+  <source src="http://66.90.94.162/ost/sen-to-chihiro-no-kamikakushi-spirited-away/mxafxrhwzv/01-ano-natsu-he.mp3" type="audio/mpeg">
+  <!-- Your browser does not support the audio element. -->
+</audio>
+
 <main>
 
  <div id= result class="result"></div>
@@ -22,7 +29,7 @@
  </main>
 
 
-<section>
+<section class="section">
 
 
    <div id = computerChoice class= " rubberBand animated" data-delay="1s">
